# aurasync-ai

./: .cta.json  .env.production  LICENSE  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: deploy.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
aurasync-backend/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  docker-compose.yml  init_db.py  migrate.py  pyproject.toml  sql_app.db
aurasync-backend/app/: main.py
aurasync-backend/app/api/: deps.py
aurasync-backend/app/api/v1/: api.py
aurasync-backend/app/api/v1/endpoints/: ai.py  auth.py  users.py
aurasync-backend/app/core/: config.py  security.py
aurasync-backend/app/crud/: __init__.py  crud_activity_goal.py  crud_chat.py  crud_nutrition.py  crud_user.py  crud_weight.py
aurasync-backend/app/db/: base_class.py
aurasync-backend/app/models/: __init__.py  activity_goal.py  chat.py  nutrition.py  user.py  weight.py
aurasync-backend/app/schemas/: __init__.py  activity_goal.py  chat.py  nutrition.py  user.py  weight.py
aurasync-backend/aurasync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aurasync-backend/migrations/: env.py
aurasync-backend/migrations/versions/: 27d83cfe0e49_initial_migration.py
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src/api/: axios.ts
src/components/: Header.tsx
src/hooks/: useAIChat.ts  useActivities.ts  useAuth.ts  useGoals.ts  useWeight.ts
src/pages/: AIChat.tsx  Activities.tsx  Analytics.tsx  Dashboard.tsx  (+11 more)
(+28 files in other folders)
